Remove extraneous horizontal space above and below buttons (input.form-submit class)
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21354 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -92,6 +92,7 @@ div.spacer, .spacer {
 
 #crm-container input.form-submit, #crm-container select {
   vertical-align: middle;
+  margin: 0.5em 0.5em 0.5em 0;
 }
 
 #crm-container td.compressed select, #crm-container td.compressed input {
