CRM-4499 - working on contact view mockup
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21417 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/mockups/contact/contactView1_files/civicrm.css
+++ b/mockups/contact/contactView1_files/civicrm.css
@@ -1355,8 +1355,7 @@ div#toolTip {
 }
 
 .primary {
-   border-bottom: 1px dashed grey;
-   padding-bottom: 2px;
+   font-weight: bold;
 }
 
 div#contactName {
