- towards report template/instance framework/permissioning.. (civireport)
git-svn-id: http://svn.civicrm.org/civicrm/branches/v2.2.report@21435 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/xml/schema/Report/Instance.xml
+++ b/xml/schema/Report/Instance.xml
@@ -27,9 +27,11 @@
   </field>
   <field>
       <name>report_id</name>
-      <type>int unsigned</type>
+      <type>varchar</type>
+      <length>64</length>
+      <required>true</required>
       <comment>FK to civicrm_option_value for the report template</comment>
-      <add>1.7</add>
+      <add>2.2</add>
   </field>
   <field>
        <name>permission</name>
