CRM-4499 - working on contact view mockup
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21488 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/mockups/contact/contactView1_files/civicrm.css
+++ b/mockups/contact/contactView1_files/civicrm.css
@@ -1373,6 +1373,7 @@ div#contactName * {
 div#contactName .label {
    font-size: .7em;
    line-height: 1.4em; 
+   color: gray;
 }
 
 div#contactName .grouplabel {
@@ -1389,7 +1390,6 @@ div#contact_panel {
 
 div#contact_panel * {
   padding: 0px;
-  margin: 0px;
   border: 0px;
 }
 
@@ -1410,6 +1410,7 @@ div#contactCardLeft .label, div#contactCardRight .label {
    font-size: 0.8em;
    vertical-align: top;
    margin-right: 10px;
+   color: gray;
 }
 
 div#contactCardLeft .grouplabel, div#contactCardRight .grouplabel {
