--- a/xml/schema/Report/Instance.xml
+++ b/xml/schema/Report/Instance.xml
@@ -34,6 +34,14 @@
       <add>2.2</add>
   </field>
   <field>
+       <name>description</name>
+       <type>varchar</type>
+       <length>255</length>
+       <localizable>true</localizable>
+       <comment>Report Instance description.</comment>
+       <add>2.2</add>
+  </field>
+  <field>
        <name>permission</name>
        <type>varchar</type>
        <length>255</length>
