#CRM-4567 #css changes for tokens
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21718 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1356,3 +1356,11 @@ div#toolTip {
 	margin    : 1em;
 }
 
+/* Class for tokens and helpicon */
+.helpIcon {
+  float       : right;
+  padding     : 5px;
+  position    : relative;
+  z-index     : 1;
+  margin-right: 45px;
+}
