--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1364,3 +1364,20 @@ div#toolTip {
   z-index     : 1;
   margin-right: 45px;
 }
+
+/* class for text area resizer jquery plugin*/
+div.grippie {
+    background   : #EEEEEE url('../i/grippie.png') no-repeat scroll center 2px;
+    border-color : #DDDDDD;
+    border-style : solid;
+    border-width : 0pt 1px 1px;
+    cursor       : s-resize;
+    height       : 9px;
+    overflow     : hidden;
+}
+.resizable-textarea textarea {
+    display       : block;
+    margin-bottom : 0pt;
+    width         : 95%;
+    height        : 20%;
+}
