css changes to tab, CRM-4406
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21794 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1381,3 +1381,11 @@ div.grippie {
     width         : 95%;
     height        : 20%;
 }
+
+.ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a {
+   font-size: 0.8em;
+}
+
+.ui-tabs .ui-tabs-nav li a {
+   padding: 5px !important;
+}
