CRM-4407 li fix for Tags editing
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21800 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -401,7 +401,7 @@ div.spacer, .spacer {
 */
 
 /* Following styles are used to remove the white bullets from the Garland Theme */
-div.block-civicrm li {
+div.block-civicrm li, #crm-container ul.treeview li {
   background-image: none;
 }
 
