report removed style properties, apply class
git-svn-id: http://svn.civicrm.org/civicrm/branches/v2.2.report@21829 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1198,4 +1198,10 @@ commented since it is overwiting simple td
     -moz-opacity: 0.5;  
     opacity: .50;  
     filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50);  
-} 
+}
+#crm-container table.report-header{
+    width           :98%;
+    background-color:#DCDCDC;
+    border          :0;
+    margin          :0;" 
+}
