CRM-4606 contactView3 mockup
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21851 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/mockups/contact/contactView3_files/civicrm.css
+++ b/mockups/contact/contactView3_files/civicrm.css
@@ -1007,6 +1007,7 @@ DIV#customFields DIV#contact_panel TD.talabel {
 
 DIV.buttons {
 	TEXT-ALIGN: right;
+    margin:8px 0 0;
 	PADDING: 4px 4px 2px;
 	WIDTH: 100%;
 	background-color: #fff;
