CRM-3897 - add horiz lines between context menu choices
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21854 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1220,6 +1220,7 @@ commented since it is overwiting simple td
   margin  : 0px;
   list-style : none;
   background-image: none;
+  border-bottom: 1px solid #CCCCCC;
 }
 
 .btn-slide {
@@ -1257,6 +1258,7 @@ commented since it is overwiting simple td
   list-style : none;
   padding    : 0px;
   margin     : 0px;
+  border-bottom: 1px solid #CCCCCC;
 }
 
 #crm-container .contextMenu a {
