--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -57,27 +57,6 @@ div#crm-container {
   height: 2em;
 }
 
-/*
-** Classes for form section show/hide links
-*/
-/*#crm-container .show-section {
-  width: 25%;
-  font-size: .95em;
-  border: 1px solid #abc;
-  background-color: #eee;
-  padding: .5em;
-  margin-bottom: 1em;
-  margin-left: 0.5em;
-}
-
-#crm-container .hide-section {
-  width: 25%;
-  font-size: .95em;
-  border: 1px solid #abc;
-  padding: .5em;
-  margin-bottom: 1em;
-}
-*/
 #crm-container .add-remove-link {
   font-size: .9em;
 }
@@ -115,13 +94,6 @@ div.spacer, .spacer {
   clear: none;
   overflow: auto; 
 }
-
-/* Use this rule for Box-Grey or other themes with very large default label fonts... */
-/*
-#crm-container div.form-item {
-  font-size: 0.90em;
-}
-*/
 
 #crm-container div.form-item dl, #crm-container .section-hidden dl{
  margin: 0;
@@ -246,17 +218,6 @@ div.spacer, .spacer {
   vertical-align: text-top;
   padding: 5px;
 }
-
-/*
- * These two directives prevent dojo comboBox fields from expanding to fill entire table cell.
- */
-#crm-container .dijitComboBox {
- width: 20em;
-}
-#crm-container .form-layout td.dijitReset, #crm-container .form-layout-compressed td.dijitReset {
- vertical-align: middle;
-}
-
 
 #crm-container .control-panel td {
   padding: 3px;
@@ -739,18 +700,6 @@ div.crm-pager a {
   padding-left: 100px;
 }
 
-/* 
-** Styles for View pages
-*/
-/*#crm-container .data-group {
-  margin: 0px 0px 5px 5px;
-  padding: 5px;
-  border-bottom: 2px solid #B0B0B0;
-}
-#crm-container .data-group-no-border {
-  margin: 0px 0px 5px 5px;
-  padding: 5px;
-}*/
 #crm-container .section-hidden, #crm-container div.view-content {
   display: block;
   margin: 0px 0px 5px 5px;
@@ -978,7 +927,6 @@ div.crm-pager a {
 #crm-container input.submit-link {
   color: #285286;
   background-color: transparent;
-  /*text-decoration: underline;*/
   border: none;
   cursor: pointer;
   cursor: hand;
@@ -1023,11 +971,9 @@ div.crm-pager a {
 #crm-container .label-pane {
     margin: 0.25em 0em 0em;
     padding: 0.25em;
-    /*background-color: #B0B0B0;*/
     background-color: #6AA8EE;
 	cursor: pointer;
-	/*color: #fff;*/
-        color: #213245;
+    color: #213245;
 	font-weight: bold;
 }
 #crm-container .label-pane :hover {
@@ -1041,31 +987,8 @@ div.crm-pager a {
 }
 
 /*
-** Following styles are used specificaly for dojo based elements
-*/
-
-#crm-container tbody.scrollContent tr:hover  {
-  /*background-color: #b9caf2;*/
-  background-color: #D0E6FD;
-}
-#crm-container thead tr.columnheader th {
-  cursor: pointer;
-  vertical-align: top;
-}
-/*
-commented since it is overwiting simple td
-#crm-container tbody td {
-   padding-left: 20px; 
-}
-*/
-#crm-container thead th.selectedUp, #crm-container thead th.selectedDown { 
-  vertical-align: top;
-}
-
-/*
  editor specific classes
 */
-
 #crm-container dd.editor {
    margin-top: 0.7em;
    margin-left: 0em;
@@ -1122,18 +1045,6 @@ commented since it is overwiting simple td
 #crm-container tr.mceLast { 
     border: 1px solid #EDEDED;                            
  }
-/* overwrite tree icon classes, since we don't want icons*/
-.tundra .dijitFolderOpened  { 
-   display: none;
-}
-
-.tundra .dijitFolderClosed {
-   display: none;
-}
-
-.tundra .dijitLeaf { 
-   display: none;
-}
 
 #location .form-layout table, #location .form-layout td,#crm-container div#location table.form-layout table.inner-table td{
    border: 0px;
@@ -1190,25 +1101,21 @@ commented since it is overwiting simple td
   margin : 0pt;
 }
 
-#crm-container table.nestedSelector
-{
+#crm-container table.nestedSelector {
     margin: 0px;
     width: 100%;
     border: 2px solid #5A8FDB;
 }
 
-#crm-container table.nestedSelector tr.columnheader
-{
+#crm-container table.nestedSelector tr.columnheader {
     background-color: #4D94E3;
 }
 
-#crm-container table.nestedSelector tr.columnheader th
-{
+#crm-container table.nestedSelector tr.columnheader th {
     border: 0px;
 }
 
-#crm-container table.caseSelector
-{
+#crm-container table.caseSelector {
     vertical-align: top;
     color: #636363;
     border: 1px solid #4E82CF;
@@ -1216,28 +1123,21 @@ commented since it is overwiting simple td
     width: 99%;
 }
 
-#crm-container table.caseSelector tr
-{
-  border-top: 1px solid #92B6EC;
-    
+#crm-container table.caseSelector tr {
+    border-top: 1px solid #92B6EC;
 }
 
-#crm-container table.caseSelector td.status-urgent 
-{
-   
+#crm-container table.caseSelector td.status-urgent {   
     color: #CD0000;
     font-weight: bold;
-
 }
 
-#crm-container table.caseSelector td
-{
+#crm-container table.caseSelector td {
     border-right: 0px;
     padding: 2px;
 }
  
-#crm-container table.nestedActivitySelector
-{
+#crm-container table.nestedActivitySelector {
     margin: 0px;
     width: 100%;
     border: 2px solid #5A8FDB;
@@ -1245,51 +1145,38 @@ commented since it is overwiting simple td
 }
 
 
-#crm-container table.nestedActivitySelector td 
-{
+#crm-container table.nestedActivitySelector td {
     border-right : 0px;
 }
 
-#crm-container table.nestedActivitySelector tr.columnheader 
-{
+#crm-container table.nestedActivitySelector tr.columnheader {
     background-color: #4D94E3;
 }
     	               
-#crm-container table.nestedActivitySelector tr.priority-urgent
-{         
+#crm-container table.nestedActivitySelector tr.priority-urgent {         
     background-color: #F8E0EC;
 }
 
-#crm-container table.nestedActivitySelector tr.priority-low
-{
+#crm-container table.nestedActivitySelector tr.priority-low {
     background-color: #CEF6F5;
 }
 
-#crm-container table.nestedActivitySelector tr.status-scheduled
-{
+#crm-container table.nestedActivitySelector tr.status-scheduled {
   color: #3B5E2B;   
 }
 
-#crm-container table.nestedActivitySelector tr.status-completed
-{
+#crm-container table.nestedActivitySelector tr.status-completed {
    color: #000080; 
    font-weight: bold;
    font-size: 10px;
 }
 
-#crm-container table.nestedActivitySelector tr.status-overdue
-{
+#crm-container table.nestedActivitySelector tr.status-overdue {
    color: #CD0000;
 }
 
-#crm-container table.nestedActivitySelector tr a
-{
+#crm-container table.nestedActivitySelector tr a {
    color: #0000FF
-}
-
-/* fix combobox display in Opera*/
-.tundra .dijitComboBox .dijitArrowButton .dijitArrowButtonInner {
-      height: 17px;
 }
 
 #crm-container span.success-status {
