//CRM-4418 //fix for flexgrid
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21864 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1144,10 +1144,21 @@ div.crm-pager a {
     color: #636363;
 }
 
+#crm-container table#activities-selector.nestedActivitySelector
+{
+     border: 0px;
+}
+
 
 #crm-container table.nestedActivitySelector td {
     border-right : 0px;
 }
+
+#crm-container table#activities-selector.nestedActivitySelector tr.status-completed
+{
+  font-size: 11px;  
+}
+
 
 #crm-container table.nestedActivitySelector tr.columnheader {
     background-color: #4D94E3;
