--- a/mockups/contact/contactView3_files/civicrm.css
+++ b/mockups/contact/contactView3_files/civicrm.css
@@ -1040,3 +1040,9 @@ DIV.buttons #icons {
 .separator {
 	border-bottom: solid 2px #ccc;
 }
+
+.individual h2 {background:url("../../../i/contact_ind.gif") no-repeat 0 50%;padding-left:20px;}
+
+.button {}
+.edit {background:url("../../../i/edit.png") transparent no-repeat; padding-left:18px;}
+.delete {background:url("../../../i/delete.png") transparent no-repeat; padding-left:18px;}
