--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -362,7 +362,7 @@ div.spacer, .spacer {
 */
 
 /* Following styles are used to remove the white bullets from the Garland Theme */
-div.block-civicrm li, #crm-container ul.treeview li {
+div.block-civicrm li, #crm-container ul li, #crm-container ul.treeview li {
   background-image: none;
 }
 
@@ -881,6 +881,7 @@ div.crm-pager a {
 #crm-container .listing-box {
   margin: 0.25em 2.0em 0.5em 0em;
   width: auto;
+  max-width: 30em;
   height: 7.25em;
   overflow: auto;
   border: 1px solid #92B6EC;
@@ -892,6 +893,7 @@ div.crm-pager a {
 #crm-container .listing-box-tall {
   margin: 0.25em 2.0em 0.5em 0em;
   width: auto;
+  max-width: 30em;
   height: 15em;
   overflow: auto;
   border: 1px solid #92B6EC;
