--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1199,39 +1199,61 @@ commented since it is overwiting simple td
     opacity: .50;  
     filter: progid:DXImageTransform.Microsoft.Alpha(opacity=50);  
 }
-#crm-container table.report-header{
-    width           :98%;
-    background-color:#DCDCDC;
-    border          :0;
-    margin          :0;" 
-}
 
 #crm-container .report-layout {
-    background-color : #F5F5F5; 
-    border           : none;
-    margin           : 0em;
-    width            : 100%;
+   background-color : #F5F5F5; 
+   border           : none;
+   margin           : 0em;
+   width            : 100%;
 }
 
-#crm-container .reports-header{
-   background-color  : #DCDCDC;
-   border            : 1px solid #DCDCDC;
-   color             : #000000;
+#crm-container .reports-header {
+   background-color : #DCDCDC;
+   border           : 1px solid #DCDCDC;
+   color            : #000000;
+}
+
+#crm-container .reports-header-right {
+   text-align       : right;
 }
 
 #crm-container .report-contents {
-   border            : 1px groove #DDDDDD;
-   padding           : 4px;
-   width             : 20%;
-   white-space       : normal;"
-   font-size         : 0.95em;
+   background-color : #F5F5F5;	       
+   border           : 1px groove #DDDDDD;
+   padding          : 4px;
+   width            : 20%;
+   white-space      : normal;"
+   font-size        : 0.95em;
+}
+
+#crm-container .report-contents-right {
+   border           : 1px groove #DDDDDD;
+   padding          : 4px;
+   font-size        : 0.95em;
+   text-align	    : right;
 }
 
 #crm-container table.report-layout td {
-   padding           : 4px;
-   border            : 1px groove #DDDDDD;
+   padding          : 4px;
+   border           : 1px groove #DDDDDD;
+   vertical-align   : top;
 }
 
-#crm-container table .report-layout tr {
-   font-size         : 0.95em; 
+#crm-container table.report-layout tr {
+   font-size        : 0.95em; 
+}
+
+#crm-container .report-label {
+  text-align        : right;
+  font-weight       : bold;
+}
+
+#crm-container table.report-layout th {
+   background-color : #DCDCDC;
+   border           : 1px solid #DCDCDC;
+   color            : #000000;
+}
+
+#crm-container table.report-layout th.report-contents {
+   background-color : #F5F5F5;	       
 }
