//CRM-4596. //fixing activity classes as per criteria for flexgrid and code cleanup.
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21921 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1146,19 +1146,17 @@ div.crm-pager a {
     color: #636363;
 }
 
-#crm-container table#activities-selector.nestedActivitySelector
-{
-     border: 0px;
-}
+#crm-container table#activities-selector.nestedActivitySelector, #crm-container table#activities-selector.nestedActivitySelector td {
+    border: 0px;
+}    
 
 
 #crm-container table.nestedActivitySelector td {
     border-right : 0px;
 }
 
-#crm-container table#activities-selector.nestedActivitySelector tr.status-completed
-{
-  font-size: 11px;  
+#crm-container table#activities-selector.nestedActivitySelector tr.status-completed {
+    font-size: 11px;  
 }
 
 
