report fixed css and statistics layout
git-svn-id: http://svn.civicrm.org/civicrm/branches/v2.2.report@21924 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1222,7 +1222,7 @@ commented since it is overwiting simple td
    border           : 1px groove #DDDDDD;
    padding          : 4px;
    width            : 20%;
-   white-space      : normal;"
+   white-space      : normal;
    font-size        : 0.95em;
 }
 
