//minor fix CRM-4596
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21929 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1159,7 +1159,7 @@ div.crm-pager a {
     color: #333333;
 }
 
-#crm-container table.nestedActivitySelector tr.columnheader {
+#crm-container table.nestedActivitySelector tr.columnheader th {
     color: #000000;
     background-color: #999999;
     border-top-color: #666666;
