CRM-4606 css integration
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21941 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/mockups/contact/contactView3_files/civicrm.css
+++ b/mockups/contact/contactView3_files/civicrm.css
@@ -899,6 +899,11 @@ DIV#toolTip {
 .primary {
 	FONT-WEIGHT: bold
 }
+
+#crm-container .ui-tabs-panel {
+    padding:0em 1.4em 1em 1em;
+}
+
 DIV#contactTopBar {
 	PADDING: 4px;
 	LINE-HEIGHT: 1.4em;
