//minor fix CRM-4596.
git-svn-id: http://svn.civicrm.org/civicrm/trunk@21948 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1124,7 +1124,7 @@ div.crm-pager a {
     width: 99%;
 }
 
-#crm-container table.caseSelector tr.columnheader th {
+#crm-container table.caseSelector tr.columnheader th, #crm-container table.caseSelector tr.columnheader th a {
     color: #FFFFFF;
     background-color: #666666;
     border-top-color: #333333;
