report pager css fix
git-svn-id: http://svn.civicrm.org/civicrm/branches/v2.2.report@21959 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1257,3 +1257,11 @@ commented since it is overwiting simple td
 #crm-container table.report-layout th.report-contents {
    background-color : #F5F5F5;	       
 }
+/*override default pager for report*/
+.report-pager .crm-pager {
+    background-color: #DCDCDC;
+    border          : thin solid #999999;
+}
+.report-pager .crm-pager-nav a {
+    color           : #000000;
+}
