--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -1204,7 +1204,7 @@ commented since it is overwiting simple td
    background-color : #F5F5F5; 
    border           : none;
    margin           : 0em 0em 0em 0.1em;
-   width            : 100%;
+   //width            : 100%;
 }
 
 #crm-container .reports-header {
@@ -1262,6 +1262,7 @@ commented since it is overwiting simple td
     background-color: #DCDCDC;
     border          : thin solid #999999;
     margin-left	    : 0.1em;
+    width           : 99%;
 }
 .report-pager .crm-pager-nav a {
     color           : #000000;
